Change instances of Weblogic to WebLogic

--- a/_layouts/base.html.haml
+++ b/_layouts/base.html.haml
@@ -49,7 +49,7 @@
                       %a{:href=>"#{site.base_url}/platforms/eap", :role=>"menuitem"}JBoss EAP
                     %li.divider
                     %li
-                      %a{:href=>"#{site.base_url}/platforms/weblogic", :role=>"menuitem"}Oracle Weblogic Server
+                      %a{:href=>"#{site.base_url}/platforms/weblogic", :role=>"menuitem"}Oracle WebLogic Server
       .row
         .span12
           ~ content
