--- a/_partials/header.html.haml
+++ b/_partials/header.html.haml
@@ -36,5 +36,5 @@
               %a{:href=>"#{site.base_url}/platforms/eap.html", "role"=>"menuitem"}JBoss EAP
             %li.divider
             %li
-              %a{:href=>"#{site.base_url}/platforms/weblogic.html", "role"=>"menuitem"}Oracle weblogic
+              %a{:href=>"#{site.base_url}/platforms/weblogic.html", "role"=>"menuitem"}Oracle WebLogic
 
