--- a/_partials/header.html.haml
+++ b/_partials/header.html.haml
@@ -33,8 +33,8 @@
               %a{:href=>"#{site.base_url}/common/implement.html", "role"=>"menuitem"}Implement
             %li.divider
             %li
-              %a{:href=>"#{site.base_url}/platforms/eap.html", "role"=>"menuitem"}JBoss EAP
+              %a{:href=>"#{site.base_url}/platforms/eap", "role"=>"menuitem"}JBoss EAP
             %li.divider
             %li
-              %a{:href=>"#{site.base_url}/platforms/weblogic.html", "role"=>"menuitem"}Oracle weblogic
+              %a{:href=>"#{site.base_url}/platforms/weblogic", "role"=>"menuitem"}Oracle WebLogic
 
